--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
 @mixin media($screen) {
   @if ($screen == "mobile") {
-    @media (min-width: 320px) and (max-width: 767px) {
+    @media (max-width: 767px) {
       @content;
     }
   } @else {
